# datasets

./: .gitignore  .prettierrc  README.md  flask_proxy.py  games_played.py  metadata.yaml  package-lock.json  package.json  prefect.yaml  requirements.txt  run.sh
.github/workflows/: datasets.yml  dev-snapshot.yml
.husky/: pre-commit
.prefect/: flows.json
SprocketData/: metadata.yaml
assets/: manifest.json  sprocket.duckdb  tailwind.config.js
assets/sprdb/: duckdb-browser-eh.worker-753c388e.js  duckdb-browser-mvp.worker-8844c23b.js  sprdb.js
data_exporters/: wispy_dew.py
data_loaders/: dark_field.py
js/: tailwind.config.cjs  vite.config.ts
lib/sprocketdb/: README.md  bun.lockb  index.html  package.json  vite.config.ts
lib/web-component/: bun.lockb  package.json  svelte.config.js  vite.config.ts
mage_data/SprocketData/: mage-ai.db
old/: prefect.yaml  requirements.txt
old/.prefect/: flows.json
old/src/: create_public_datasets.py
queries/public/: Avg_Scrim_Stats.sql  Scrim_Results_13m.sql  Total_Scrim_Stats.sql  Total_Scrim_Stats_13m.sql  Total_Scrim_Stats_90d  Total_Scrim_Stats_S19  all_the_ids.sql  eligibility_data.sql  franchises.sql  historicalAggregatedPlayerStats.sql  leagues.md  leagues.sql  match_report_cards.sql  members.md  members.sql  (+18 more)
scripts/: import-dev-snapshot.sh
sql2datasets/: LICENSE  PKG-INFO  README.md  cron_job.sh  pyproject.toml
sql2datasets/src/sql2datasets/: sql2csv.py
src/: build_dataset_site.py  create_public_datasets.py  execute_public_queries.py  execute_query_file.py  games_played.py  sync_player_averages.py
(+81 files in other folders)
