[project]
name = "sql2datasets"
authors = [
    { name = "Rudra", email = "veerabhadrareddy@pm.me" },
    { name = "VeeraBhadraReddy", email = "veerabhadrareddy@pm.me" },
    { name = "solitorb", email = "veerabhadrareddy@pm.me" },
]
version = "0.1.0"
description = "sql2datasets: Execute SQL queries and export results to CSV, JSON, and Parquet formats with S3 upload support."
requires-python = ">=3.11,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = ["boto3", "python-dotenv", "psycopg2-binary", "pandas", "pyarrow", "markdown", "pyyaml"]
readme = "README.md"

[project.scripts]
sql2csv = "sql2datasets.sql2csv:main"

[project.urls]
Homepage = "https://github.com/SprocketBot/datasets"
Repository = "https://github.com/SprocketBot/datasets"
"Bug Tracker" = "https://github.com/SprocketBot/datasets/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"
flake8 = "^6.0.0"
